<resources>
    <string name="app_name">TURINO</string>

    <string name="hint_your_phone_number">Your phone number</string>
    <string name="hint_password">Password</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="login">LOGIN</string>
    <string name="login_with">Login with</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome">"Welcome!"</string>
    <string name="welcome_back">"Welcome Back!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_out">"Log Out"</string>
    <string name="or_login_with">or Login with</string>
    <string name="remember_me">Remember me</string>
    <string name="not_a_Turino_user_yet">Not a Turino user yet?</string>


</resources>